--- a/src/pages/components/inline-loading/style.mdx
+++ b/src/pages/components/inline-loading/style.mdx
@@ -42,6 +42,5 @@ The inline loading component should appear during any user action loading. If bu
 
 ![Inline loading spinner animated_in context example](images/inline-loading-animated.gif)
 
-<Caption>
-    Example of a inline loading in product context
-</Caption>
+<br />
+<Caption>Example of a inline loading in product context</Caption>
