--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -2,89 +2,520 @@
 title: Resources
 ---
 
-import {
-  AnchorLinks,
-  AnchorLink,
-  PageDescription,
-  Video,
-} from 'gatsby-theme-carbon';
-
 <PageDescription>
 
-  Add-on repositories, or repos, are components built for a specific product or
-  experience. The repos are built on top of the core Carbon repo, and enable
-  teams to create their own custom components that follow Carbon's visual style
-  and guidelines.
+Everything you need to work with, learn about, and contribute to Carbon.
 
 </PageDescription>
 
 <AnchorLinks>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
+  <AnchorLink>Development resources</AnchorLink>
+  <AnchorLink>Design resources</AnchorLink>
+  <AnchorLink>Tools</AnchorLink>
+  <AnchorLink>Reading</AnchorLink>
 </AnchorLinks>
 
-## Images
 
-![blossom](../../images/blossom.jpg)
+## Development resources
 
-## Videos
+### GitHub repos
 
-<Video title="Eyes" vimeoId="310583077" />
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon Components"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="https://github.com/ibm/carbon-components"
+      >
 
-## Checklist
+![](/images/github-icon.png)
 
-Please answer yes or no to the following list of questions:
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon Components React"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="https://github.com/ibm/carbon-components-react"
+      >
 
-- Is your team using Carbon components?
-- Does your team have the need to add custom components in addition to Carbon's core components?
-- Will these components only be needed by your team?
-- Do you need these custom components to match Carbon's visual style?
+![](/images/github-icon.png)
 
-#### If you've answered "yes" to all the questions above...
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon Components Angular"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="https://github.com/ibm/carbon-components-angular"
+      >
 
-then you definitely qualify for an add-on repo! Jump to the next section to learn about the required steps to create an add-on repo.
+![](/images/github-icon.png)
 
-#### If you answered "no" to any of the questions above...
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon Components Vue"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="https://github.com/ibm/carbon-vue"
+      >
 
-but still feel like you need an add-on repo, please reach out to the a member of the Carbon team to discuss additional options. It might be that your component need is something that can be shared across the core Carbon organization. In this case, we can talk about how you can contribute this component back to the core Carbon repo.
+![](/images/github-icon.png)
 
-## Creating add-ons
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon boilerplate"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="https://github.com/carbon-design-system/carbon-boilerplate"
+      >
 
-There are a number of growing add-on repos that can be found under the [Carbon org](https://github.com/carbon-design-system). If you'd like to create an add-on repo we have created a [vanilla boilerplate](https://github.com/carbon-design-system/carbon-boilerplate) and a [react boilerplate](https://github.com/carbon-design-system/carbon-addons-boilerplate-react) that you can clone to get started. For further assistance please reach out to a member of the carbon design team.
+![](/images/github-icon.png)
 
-### Private vs public
+  </ResourceCard>
+</Column>
+</Row>
 
-Carbon Design System is an open-source project and we do encourage teams using Carbon Design System to stay open-source as well. However, if your product has privacy constraints, we can discuss options for creating an add-on repo under our GitHub Enterprise account.
+### Storybooks
 
-## Contributing to add-ons
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon React Storybook"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="http://react.carbondesignsystem.com/"
+      >
 
-Add-ons are generally easier to contribute to because they are not fully managed by the Carbon team. Below are the items that you need to pass in order for your contribution to be accepted. You can read our full contribution process for [design](/contributing/designers) and [development](/contributing/developers) to learn more.
+![](/images/react-icon.png)
 
-| Category      | Metric                                              | Core library | Add-ons |
-| ------------- | --------------------------------------------------- | ------------ | ------- |
-| Accessibility | WCAG AA                                             | ✅           | ✅      |
-|               | Keyboard tabbing                                    | ✅           | ✅      |
-|               | Carbon custom focus states                          | ✅           |         |
-| Visual + UX   | Carbon themed                                       | ✅           |         |
-|               | Universal pattern <br />(fits for 2-3 use cases)    | ✅           |         |
-|               | Interaction states (hover, active, focus, disabled) | ✅           | ✅      |
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon Components Vue Storybook"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="http://vue.carbondesignsystem.com/"
+      >
 
-## Ownership
+![](/images/vue-icon.png)
 
-Once an add-on repo has been created, the team or product that requested it is in charge of maintaining and keeping it up to date. This involves carrying over specific changes from the core Carbon repo, as well as making sure it is using the latest major version of Carbon Components.
+  </ResourceCard>
+</Column>
+</Row>
 
-## Carbon support
+## Design resources
 
-The table below shows the Carbon team's level of support for the Core library vs. the Add-ons repo.
+### Theme libraries
 
-| Support category          | Core library | Add-ons |
-| ------------------------- | ------------ | ------- |
-| General design questions  | ✅           | ✅      |
-| Design feedback & support | ✅           |         |
-| Troubleshooting           | ✅           | ✅      |
-| Bug fixes                 | ✅           |         |
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="White theme"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="sketch://add-library/cloud/JaVzz"
+      >
+
+![](/images/sketch-icon.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Gray 10 theme"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="sketch://add-library/cloud/Onwv2"
+      >
+
+![](/images/sketch-icon.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Gray 90 theme"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="sketch://add-library/cloud/eo37p"
+      >
+
+![](/images/sketch-icon.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Gray 100 theme"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="sketch://add-library/cloud/d13Ll"
+      >
+
+![](/images/sketch-icon.png)
+
+  </ResourceCard>
+</Column>
+</Row>
+
+### Color, grid, and icons
+
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="RGB color palettes (.ase and .clr)"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="https://www.carbondesignsystem.com/files/IBM_Colors_RGB.zip"
+      >
+
+![](/images/ase.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="IBM Design Language library"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="sketch://add-library/cloud/75VZZ"
+      >
+
+![](/images/sketch-icon.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="2x Grid template"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="sketch://add-library/cloud/ngV7z"
+      >
+
+![](/images/sketch-icon.png)
+
+  </ResourceCard>
+</Column>
+</Row>
+
+### Design kit
+
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon Design Kit"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="https://github.com/ibm/carbon-design-kit"
+      >
+
+![](/images/github-icon.png)
+
+  </ResourceCard>
+</Column>
+</Row>
+
+<br />
+
+#### IBM Plex
+
+Carbon uses the open-source typeface [IBM Plex](https://github.com/IBM/plex) – carefully designed to meet IBM's needs as a global technology company and reflect IBM's spirit, beliefs, and design principles.
+
+#### IBM Design Language
+
+Carbon delivers the [IBM Design Language](https://www.ibm.com/design/language/) as tools for designers and developers, guidance, tutorials, and support.
+
+## Tools
+
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Carbon CodePen"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="http://www.codepen.io/team/carbon"
+      >
+
+![](/images/codepen-icon.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Theming sandbox"
+      aspectRatio="2:1"
+      actionIcon="arrowRight"
+      href="http://themes.carbondesignsystem.com/"
+      >
+
+![](/images/sandbox-icon.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Color contrast checker"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="https://marijohannessen.github.io/color-contrast-checker/"
+      >
+
+![](/images/color-contrast-icon.png)
+
+  </ResourceCard>
+</Column>
+</Row>
+
+## Reading
+
+### Featured stories
+
+<Row>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Smashing Magazine's “Design Systems” Book"
+      href="https://www.smashingmagazine.com/design-systems-book/"
+      >
+
+![](/images/Featured_01.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Winter 2017 HOW In-House Design Award Winner"
+      href="http://www.howdesign.com/84-award-winning-projects-from-in-house-design-teams/"
+      >
+
+![](/images/Featured_02.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Path to Design System Maturity"
+      href="https://medium.com/ux-power-tools/the-path-to-design-system-maturity-d403daba692a"
+      >
+
+![](/images/Featured_03.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Responsive Web Design Podcast"
+      href="https://responsivewebdesign.com/podcast/ibm-carbon/"
+      >
+
+![](/images/Featured_04.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="UX Pin Virtual Design Summit"
+      href="https://www.youtube.com/watch?v=eSvq5MieOdw&t=144s"
+      >
+
+![](/images/Featured_05.png)
+
+  </ArticleCard>
+</Column>
+</Row>
+
+### Articles
+
+<Row>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Carbon v10.3.0 (May 2019)"
+      author="Josh Black"
+      date="June 6, 2019"
+      readTime="Read time: 5 min"
+      href="https://medium.com/carbondesign/carbon-v10-3-0-may-2019-41b1f970f0ce"
+      >
+
+![](../resources/images/10_3-image.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Essentials: Learn to build with Carbon"
+      author="Matt Rosno"
+      date="May 15, 2019"
+      readTime="Read time: 2 min"
+      href="https://medium.com/carbondesign/essentials-learn-to-build-with-carbon-1d11ce05125f"
+      >
+
+![](../resources/images/code_palette.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Carbon is moving to a monorepo"
+      author="Josh Black"
+      date="May 10, 2019"
+      readTime="Read time: 3 min"
+      href="https://medium.com/carbondesign/carbon-is-moving-to-a-monorepo-c6bfcbe87de0"
+      >
+
+![](../resources/images/mono_repo_teal.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Carbon dark themes are here"
+      author="Lauren Rice"
+      date="April 29, 2019"
+      readTime="Read time: 3 min"
+      href="https://medium.com/carbondesign/carbon-dark-themes-are-here-a18910a0f910"
+      >
+
+![](../resources/images/carbon_themes.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Carbon v10 Release"
+      author="Robin Cannon"
+      date="April 4, 2019"
+      readTime="Read time: 3 min"
+      href="https://medium.com/carbondesign/carbon-v10-release-812eacb7da7f"
+      >
+
+![](../resources/images/bee_70.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Design with Carbon: Update your Sketch symbols to V10"
+      author="Anna Gonzales"
+      date="April 2, 2019"
+      readTime="Read time: 2 min"
+      href="https://medium.com/carbondesign/design-with-carbon-update-your-sketch-symbols-to-v10-ef3132ea2e97"
+      >
+
+![](../resources/images/designing_with_carbon.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Minimal CSS with Carbon"
+      author="Josh Black"
+      date="April 1, 2019"
+      readTime="Read time: 6 min"
+      href="https://medium.com/carbondesign/minimal-css-with-carbon-b0c089ccfa71"
+      >
+
+![](../resources/images/minimal_css.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Preview Carbon v10 today"
+      author="Josh Black"
+      date="March 22"
+      readTime="Read time: 4 min"
+      href="https://medium.com/carbondesign/preview-carbon-v10-today-df42b8bd0130"
+      >
+
+![](../resources/images/preview_article.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="What to expect in Carbon 10"
+      author="Robin Cannon"
+      date="December 10, 2018"
+      readTime="Read time: 5 min"
+      href="https://medium.com/carbondesign/what-to-expect-in-carbon-10-5af1bd6e25f6"
+      >
+
+![](images/Carbon_what_to_expect.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Up & Running with Carbon React"
+      author="Josh Black"
+      date="October 19, 2018"
+      readTime="Read time: 4 min"
+      href="https://medium.com/carbondesign/up-running-with-carbon-react-in-less-than-5-minutes-25d43cca059e"
+      >
+
+![](/images/Article_02.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Hacktoberfest with Carbon"
+      author="Josh Black"
+      date="October 16, 2018"
+      readTime="Read time: 3 min"
+      href="https://medium.com/carbondesign/hacktoberfest-with-carbon-95c48943f586"
+      >
+
+![](images/Article_03.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Data Table updates in Carbon React v5.22.0"
+      author="Josh Black"
+      date="February 20, 2018"
+      readTime="Read time: 5 min"
+      href="https://medium.com/carbondesign/data-table-updates-in-carbon-react-v5-22-0-6da0c24a96d6"
+      >
+
+![](images/Article_04.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Introducing Carbon Themes"
+      author="Bethany Sonefeld"
+      date="August 11, 2017"
+      readTime="Read time: 3 min"
+      href="https://medium.com/design-ibm/introducing-carbon-themes-83d3985a8627"
+      >
+
+![](/images/Article_05.png)
+
+  </ArticleCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterMdLeft>
+    <ArticleCard
+      title="Carbon: Designing inside Big Blue"
+      author="Bethany Sonefeld"
+      date="March 30, 2017"
+      readTime="Read time: 5 min"
+      href="https://medium.com/design-ibm/carbon-designing-inside-big-blue-8577883cfe42"
+      >
+
+![](/images/Article_06.png)
+
+  </ArticleCard>
+</Column>
+</Row>
