--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -6,13 +6,12 @@ tabs: ['Usage','Style']
 ### This header is part of the Carbon UI shell. A shell is a collection of components shared by all products within a platform. It provides a common set of interaction patterns that persist between and across products.
 
 <AnchorLinks>
-
-- [General guidance](#general-guidance)
-- [Anatomy](#anatomy)
-- [Icon placement](#icon-placement)
-- [Behavior](#behavior)
-
+  <AnchorLink>General guidance</AnchorLink>
+  <AnchorLink>Anatomy</AnchorLink>
+  <AnchorLink>Icon placement</AnchorLink>
+  <AnchorLink>Behavior</AnchorLink>
 </AnchorLinks>
+
 
 ![UI shell header](images/zones-platform.png)
 
