--- a/src/pages/components/UI-shell-left-panel/usage.mdx
+++ b/src/pages/components/UI-shell-left-panel/usage.mdx
@@ -6,11 +6,9 @@ tabs: ['Usage','Style']
 ### This left panel is part of the Carbon UI shell. A shell is a collection of components shared by all products within a platform. It provides a common set of interaction patterns that persist between and across products. 
 
 <AnchorLinks>
-
-- [General guidance](#general-guidance)
-- [Anatomy](#anatomy)
-- [Behavior](#behavior)
-
+  <AnchorLink>General guidance</AnchorLink>
+  <AnchorLink>Anatomy</AnchorLink>
+  <AnchorLink>Behavior</AnchorLink>
 </AnchorLinks>
 
 ## General guidance
