--- a/src/pages/components/UI-shell-right-panel/usage.mdx
+++ b/src/pages/components/UI-shell-right-panel/usage.mdx
@@ -6,11 +6,9 @@ tabs: ['Usage', 'Style']
 ### The right panel is part of the Carbon UI shell. A shell is a collection of components shared by all products within a platform. It provides a common set of interaction patterns that persist between and across products. 
 
 <AnchorLinks>
-
-- [General guidance](#general-guidance)
-- [Anatomy](#anatomy)
-- [Behavior](#behavior)
-
+  <AnchorLink>General guidance</AnchorLink>
+  <AnchorLink>Anatomy</AnchorLink>
+  <AnchorLink>Behavior</AnchorLink>
 </AnchorLinks>
 
 ## General guidance
@@ -40,6 +38,7 @@ Note that the switcher also lives in a right panel.
 <Caption>
     The right panel configured as an empty header panel (left) and a switcher (right).
 </Caption>
+
 #### Switcher item
 
 A switcher item is anything that changes what product, offering, or property occupies the UI shell. Consider moments in a product when you switch from a calendar to a mailbox, from Kubernetes to Catalog. These items belong in the switcher.
