--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -46,8 +46,8 @@ Carbon has defined a set of accessible syntax colors. View an incontext [example
 | `.bx--snippet--single` | padding-right | 48 / 3     | `$spacing-09` |
 | `.bx--snippet--single` | padding-left  | 16 / 1     | `$spacing-05` |
 
-<!-- Not done with spacing but with positioning
-|| Spacing: icon & tooltip | 4 | 0.5| -->
+/* Not done with spacing but with positioning
+|| Spacing: icon & tooltip | 4 | 0.5| */
 
 ![Structure and spacing measurements for code snippet](images/code-snippet-style-1.png)
 
