--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -46,7 +46,7 @@ If zebra striping is turned off, you must have row dividers.
     Data table with various row styling
 </Caption>
 
-<!-- This section is commented out until themes are ready
+/* This section is commented out until themes are ready
 
 **Background colors**
 
@@ -57,7 +57,7 @@ Data tables are built to be accessible against the `$ui-background` color:
 ![Data table: background colors](images/data-table-style-2.png)
 
 </ImageComponent>
--->
+*/
 
 ## Typography
 
