--- a/src/pages/contributing/add-ons/add-ons.mdx
+++ b/src/pages/contributing/add-ons/add-ons.mdx
@@ -1,40 +1,19 @@
 ---
-title: Governance
+title: Add-ons
 ---
 
-import {
-  AnchorLinks,
-  AnchorLink,
-  PageDescription,
-  Video,
-} from 'gatsby-theme-carbon';
-
-<PageDescription>
-
-Add-on repositories, or repos, are components built for a specific product or
-experience. The repos are built on top of the core Carbon repo, and enable
-teams to create their own custom components that follow Carbon's visual style
-and guidelines.
-
-</PageDescription>
-
 <AnchorLinks>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
-  <AnchorLink>The foundation</AnchorLink>
+    <AnchorLink>Add-on repositories</AnchorLink>
+    <AnchorLink>Checklist</AnchorLink>
+    <AnchorLink>Creating add-ons</AnchorLink>
+    <AnchorLink>Contributing to add-ons</AnchorLink>
+    <AnchorLink>Ownership</AnchorLink>
+    <AnchorLink>Carbon support</AnchorLink>
 </AnchorLinks>
 
-## Images
+## Add-on repositories
 
-![blossom](../../images/blossom.jpg)
-
-## Videos
-
-<Video title="Eyes" vimeoId="310583077" />
+Add-on repositories, or repos, are components built for a specific product or experience. The repos are built on top of the core Carbon repo, and enable teams to create their own custom components that follow Carbon's visual style and guidelines.
 
 ## Checklist
 
@@ -57,7 +36,7 @@ but still feel like you need an add-on repo, please reach out to the a member of
 
 There are a number of growing add-on repos that can be found under the [Carbon org](https://github.com/carbon-design-system). If you'd like to create an add-on repo we have created a [vanilla boilerplate](https://github.com/carbon-design-system/carbon-boilerplate) and a [react boilerplate](https://github.com/carbon-design-system/carbon-addons-boilerplate-react) that you can clone to get started. For further assistance please reach out to a member of the carbon design team.
 
-### Private vs public
+### Private vs. public
 
 Carbon Design System is an open-source project and we do encourage teams using Carbon Design System to stay open-source as well. However, if your product has privacy constraints, we can discuss options for creating an add-on repo under our GitHub Enterprise account.
 
@@ -65,14 +44,14 @@ Carbon Design System is an open-source project and we do encourage teams using C
 
 Add-ons are generally easier to contribute to because they are not fully managed by the Carbon team. Below are the items that you need to pass in order for your contribution to be accepted. You can read our full contribution process for [design](/contributing/designers) and [development](/contributing/developers) to learn more.
 
-| Category      | Metric                                              | Core library | Add-ons |
-| ------------- | --------------------------------------------------- | ------------ | ------- |
-| Accessibility | WCAG AA                                             | ✅           | ✅      |
-|               | Keyboard tabbing                                    | ✅           | ✅      |
-|               | Carbon custom focus states                          | ✅           |         |
-| Visual + UX   | Carbon themed                                       | ✅           |         |
-|               | Universal pattern <br />(fits for 2-3 use cases)    | ✅           |         |
-|               | Interaction states (hover, active, focus, disabled) | ✅           | ✅      |
+| Category      | Metric                                              | Core library                                         | Add-ons                                              |
+| ------------- | --------------------------------------------------- | ---------------------------------------------------- | ---------------------------------------------------- |
+| Accessibility | WCAG AA                                             | ✅ | ✅ |
+|               | Keyboard tabbing                                    | ✅ | ✅ |
+|               | Carbon custom focus states                          | ✅ |                                                      |
+| Visual + UX   | Carbon themed                                       | ✅ |                                                      |
+|               | Universal pattern <br />(fits for 2-3 use cases)    | ✅ |                                                      |
+|               | Interaction states (hover, active, focus, disabled) | ✅ | ✅ |
 
 ## Ownership
 
@@ -82,9 +61,9 @@ Once an add-on repo has been created, the team or product that requested it is i
 
 The table below shows the Carbon team's level of support for the Core library vs. the Add-ons repo.
 
-| Support category          | Core library | Add-ons |
-| ------------------------- | ------------ | ------- |
-| General design questions  | ✅           | ✅      |
-| Design feedback & support | ✅           |         |
-| Troubleshooting           | ✅           | ✅      |
-| Bug fixes                 | ✅           |         |
+| Support category          | Core library                                         | Add-ons                                              |
+| ------------------------- | ---------------------------------------------------- | ---------------------------------------------------- |
+| General design questions  | ✅ | ✅ |
+| Design feedback & support | ✅ |                                                      |
+| Troubleshooting           | ✅ | ✅ |
+| Bug fixes                 | ✅ |                                                      |
