docs: homepage and some other stuff

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -2,4 +2,26 @@ import HomepageTemplate from 'gatsby-theme-carbon/src/templates/Homepage';
 
 export default HomepageTemplate;
 
-## Content starts here
+<FeatureCard
+  subTitle="Start"
+  title="Designing"
+  actionIcon="arrowRight"
+  href="/getting-started/designers"
+  color="dark"
+  >
+
+![Get started for designers](homepage/images/getting-started-designers.png)
+
+</FeatureCard>
+<FeatureCard
+  subTitle="Start"
+  title="Developing"
+  actionIcon="arrowRight"
+  href="/getting-started/developers"
+  color="dark"
+  >
+
+![Get started for developers](homepage/images/getting-started-developers.png)
+
+</FeatureCard>
+
