check this stuff maybe

--- a/src/pages/guidelines/accessibility/developers.mdx
+++ b/src/pages/guidelines/accessibility/developers.mdx
@@ -5,11 +5,9 @@ tabs: ['Overview', 'Color', 'Keyboard', 'Developers']
 ---
 
 <AnchorLinks>
-
-- [HTML best practices](#html-best-practices)
-- [CSS best practices](#css-best-practices)
-- [JS best practices](#js-best-practices)
-
+  <AnchorLink>HTML best practices</AnchorLink>
+  <AnchorLink>CSS best practices</AnchorLink>
+  <AnchorLink>JS best practices</AnchorLink>
 </AnchorLinks>
 
 ## HTML best practices
