--- a/src/pages/guidelines/accessibility/overview.mdx
+++ b/src/pages/guidelines/accessibility/overview.mdx
@@ -3,17 +3,18 @@ label: IBM firmly believes that web and software experiences should be accessibl
 title: Accessibility
 tabs: ['Overview', 'Color', 'Keyboard', 'Developers']
 ---
+<PageDescription>
 
-### IBM firmly believes that web and software experiences should be accessible for everyone, regardless of abilities or impairments. Carbon is committed to following and complying with best practices when it comes to accessibility. 
+IBM firmly believes that web and software experiences should be accessible for everyone, regardless of abilities or impairments. Carbon is committed to following and complying with best practices when it comes to accessibility. 
+
+</PageDescription>
 
 <AnchorLinks>
-
-- [Carbon and accessibility](#carbon-and-accessibility)
-- [Categories of disabilities](#categories-of-disabilities)
-- [Global accessibility standards](#global-accessibility-standards)
-- [Resources](#resources)
-- [Tools](#tools)
-
+    <AnchorLink>Carbon and accessibility</AnchorLink>
+    <AnchorLink>Categories of disabilities</AnchorLink>
+    <AnchorLink>Global accessibility standards</AnchorLink>
+    <AnchorLink>Resources</AnchorLink>
+    <AnchorLink>Tools</AnchorLink>
 </AnchorLinks>
 
 ## Carbon and accessibility
