--- a/src/pages/guidelines/accessibility/color.mdx
+++ b/src/pages/guidelines/accessibility/color.mdx
@@ -14,19 +14,20 @@ tabs: ['Overview', 'Color', 'Keyboard', 'Developers']
 
 ## Resources
 
-<Row className="tile--group">
-<Column offsetLg="4" colMd="4" colLg="4" noGutterSm>
-<ClickableTile
-    title="Carbon color contrast tool"
-    href="https://marijohannessen.github.io/color-contrast-checker/"
-    type="resource"
-     >
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      title="Color contrast checker"
+      aspectRatio="2:1"
+      actionIcon="download"
+      href="https://marijohannessen.github.io/color-contrast-checker/"
+      >
 
-</ClickableTile>
+![](/images/color-contrast-icon.png)
+
+  </ResourceCard>
 </Column>
 </Row>
-
-
 
 ## Introduction
 
@@ -73,11 +74,7 @@ Color blindness involves difficulty in perceiving or distinguishing between colo
 
 Don't rely on color alone to convey meaning. This includes conveying information, indicating an action, prompting the user for a response, or distinguishing one visual element from another. When designing with color, it might help to use a color-blind simulator to review visibility of content. If you're working in Sketch, we recommend the [Stark](http://www.getstark.co/) plugin.
 
-<ImageComponent cols="12">
-
 ![rainbow palette](images/color-accessibility-1.png)
-
-</ImageComponent>
 
 ## Low vision
 
@@ -92,11 +89,7 @@ Low vision can include partial sight in one or both eyes and can range from mild
 
 ### Low-vision disabilities
 
-<ImageComponent cols="12">
-
 ![blurred vision and tunnel vision example on Google website](images/color-accessibility-2.png)
-
-</ImageComponent>
 
 ### Designing for low vision
 
